tests/base/parser/bad/exps/exp_t-string-with.scilexp
0x1234567890abcdefg (* should no be 'g' *)
